src/app/app.component.scss
.grup4 {
    padding: 3rem 0 6rem;

    background-color: hsl(180, 98%, 11%);
    color: hsl(167, 100%, 87%);
    
    div.row {
        align-items: flex-start;
        justify-content: center;
    }

    .divs {
        display: flex;
        flex-wrap: wrap;
        align-items: flex-start;
        justify-content: center;
        gap: 1rem;
    
        div {
            border-radius: 4rem;
            padding: 1rem;
    
            p {
                padding-top: 1rem;
                font-size: 1.5rem;
            }
    
            button {
                margin: 5rem 5rem 0 0;
                border-radius: 0.5rem;
                font-size: 1.5rem;
                padding: 0.5rem 1rem;
            }

            &.bad {
                background-color: hsl(0, 45%, 51%);
                color: hsl(0, 100%, 93%);
                button {
                    background-color: hsl(0, 83%, 21%);
                }
            }
            &.good {
                background-color: hsl(167, 63%, 30%);
                color: inherit;
                button {
                    background-color: hsl(150, 90%, 15%);
                }
            }
        }
    }
}




















.grup3 {
    padding: 3rem 0 6rem;

    background-color: hsl(295, 100%, 10%);
    color: hsl(283, 100%, 90%);
    accent-color: hsl(282, 100%, 77%);
    
    .freeTest {


        .divButton {
            background-color: hsl(283, 47%, 54%);
            width: 300px;
            height: 300px;
            margin: auto;

            


            button {
                background-color: hsl(314, 100%, 16%);
                width: 100px;
                height: 75px;

                cursor: move;

                border-radius: 0.5rem;
            }
        }

    }
}


.grup2 {
    padding: 3rem 0 6rem;
    
    background-color: hsl(53, 100%, 13%);
    color: hsl(60, 100%, 92%);
    accent-color: hsl(60, 100%, 65%);

    .divs1 {
        // background-color: #732b2b;
        display: flex;
        flex-wrap: wrap;
        align-items: flex-start;
        justify-content: center;

        .div2 {
            border-radius: 60px;
            margin: 1rem;
            background-color: hsl(60, 100%, 80%);

            button {
                background-color: hsl(52, 100%, 22%);
                border: none;
                padding: 4rem;
                font-size: 1.5rem;
            }
            .divInput {
                padding: 1rem;
                background-color: hsl(52, 100%, 27%);
                padding: 4rem 0.25rem;
                
                input {
                    background-color: hsl(52, 100%, 22%);
                    
                    font-family: "Consolas";
                    // border: none;
                    outline: none;
                    font-size: 1.2rem;
                    text-align: center;
                }
            }
        }
    }
}






.grup1 {
    padding: 3rem 0 6rem;

    background-color: hsl(206, 100%, 10%);
    color: hsl(200, 100%, 87%);
    accent-color: hsl(200, 100%, 72%);

    
    align-items: flex-start;
    
    column-gap: 2rem;

    .containerWith4Divs {
        display: flex;
        flex-wrap: wrap;
        align-content: center;
        justify-content: center;
        
        
        width: 350px;
        height: 350px;

        // background: url("https://images.pexels.com/photos/12770790/pexels-photo-12770790.jpeg");
        // background-size: cover;
        background-color: hsl(198, 15%, 67%);
        

        div {
            display: none;
            width: 46%;
            height: 29.5%;
            margin: 1.5%;
            text-align: center;
            font-size: 2rem;
            cursor: move;
            border-radius: 0.5rem;

            display: flex;
            justify-content: center;
            align-items: center;
            

            // backdrop-filter: blur(20px);

            &.a { background-color: hsl(202, 100%, 50%); width: 34%; }
            &.b { background-color: hsl(212, 100%, 50%); width: 57%; }
            &.c { background-color: hsl(222, 100%, 52%); width: 46%; }
            &.d { background-color: hsl(232, 100%, 55%); width: 46%; }
            &.e { background-color: hsl(252, 100%, 52%); width: 57%; }
            &.f { background-color: hsl(262, 100%, 50%); width: 34%; }
        }
    }

    .mobil {
        display: flex;
        flex-direction: column;
        justify-content: flex-end;
        gap: 0.5rem;

        width: 250px;
        height: 400px;
        margin: auto;
        padding: 0.5rem;

        

        // background: linear-gradient(15deg, hsl(205, 60%, 70%), hsl(205, 51%, 22%));
        background-color: hsl(198, 15%, 67%);


        .option {
            overflow: hidden;
            background-color: hsl(198, 0%, 91%);
            
            font-size: 1.6rem;
            padding: 0.5rem 0 0.5rem;
            border-radius: 0.7rem;

            z-index: 10;
            cursor: move;
        }
        .cancel {
            bottom: 3.8rem;
            color: #ff3b30;
        }
        .save {
            bottom: 0;
            color: #007aff;
        }
    }
}

button {
    border: none;
    outline: none;

    color: inherit;
}


.shadow-1 { box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24) !important; }
.shadow-2 { box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23) !important; }
.shadow-3 { box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23) !important; }
.shadow-4 { box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22) !important; }
.shadow-5 { box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22) !important; }

